compiler/test-data/parser/types/errors/draft_on_collection.frel
module types.errors.draft_on_collection

backend InvalidDraftBackend {
    cache : draft List<String>
}
